Complete World Web Map reliability and release-readiness remediation